2005-12-22  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.

        - made RefPtr<DOMStringImpl> usable as a hashtable key/value
	- changed XSLTProcessorImpl to make use of this instead of a QDict.
	- partially fixed broken param handling for xslt

	See LayoutTests for updated test case.

        * khtml/xml/dom_stringimpl.cpp:
        * khtml/xml/dom_stringimpl.h:
        (KXMLCore::): Set things up so you can use RefPtr<DOMStringImpl> as
	a hashtable key (should already be usable as a value).
        * khtml/xsl/xslt_processorimpl.cpp:
        (DOM::xsltParamArrayFromParameterMap): Updated to use a HashMap of RefPtrs instead
	of QDict. Also, fixed bugs that would have kept this from ever working at all.
        (DOM::XSLTProcessorImpl::transformToString): ditto
        (DOM::XSLTProcessorImpl::setParameter): ditto
        (DOM::XSLTProcessorImpl::getParameter): ditto
        (DOM::XSLTProcessorImpl::removeParameter): ditto
        * khtml/xsl/xslt_processorimpl.h:

2005-12-21  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

        - update for new HashTranslator stuff

        * khtml/xml/dom_atomicstring.cpp:
        (DOM::CStringTranslator::hash):
        (DOM::CStringTranslator::equal):
        (DOM::CStringTranslator::translate):
        (DOM::AtomicString::equal):
        (DOM::AtomicString::add):
        (DOM::QCharBufferTranslator::hash):
        (DOM::QCharBufferTranslator::equal):
        (DOM::QCharBufferTranslator::translate):
        * khtml/xml/dom_qname.cpp:
        (DOM::QNameComponentsTranslator::hash):
        (DOM::QNameComponentsTranslator::equal):
        (DOM::QNameComponentsTranslator::translate):
        (DOM::QualifiedName::QualifiedName):

2005-12-22  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        Cleaned up a previous checkin by defining global const defaultForm.

        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::radioButtonChecked):